@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11673] "CargoObjectInfoTest skal opdateres"
    - bug [11276] "Er der en grund til at vi har lavet vores "egen implementation" af OpenSearchException?"
    - bug [11275] "Kan vi fjerne OpenSearchTransformException"
    - bug [11043] "ESHarvester bør frigive ikke-uførte jobs ved nedlukning af Datadock"
